completed see detailas Button Click with api

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <input id="search-value" type="text" class="form-control" placeholder="how many student details" aria-label="how many student details" aria-describedby="button-addon2">
         <button id="serach-button" class="btn btn-outline-primary" type="button" id="button-addon2">Search</button>
     </div>
+    <!-- student details -->
+    <section>
+        <div id="student-details" class="w-50 mx-auto">
+
+        </div>
+    </section>
+
 
     <!-- student result secttion  -->
     <section class="container">
